# AquaG20

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  errors.py  extensions.py  forms_fields.py  money.py  observability.py  security.py  template_filters.py  validity.py
app/auth/: decorators.py  mailer.py  password.py  tokens.py
app/models/: __init__.py  base.py  cadastros.py  financeiro.py  frota.py  logistica.py  pedidos.py  pool.py  tenant.py
files/: AquaG20_Projeto.docx  schema_aguaG20.sql
migrations/: env.py
scripts/: audit_tenant_filter.py  backup_db.py  init_db.ps1  install_tailwind.ps1  reconstruir_saldos.py  seed_demo.py  setup_mysql.sql  sync_backups_gdrive.py  sync_backups_s3.py  tailwind_watch.ps1  test_s3_e2e.ps1
tests/: conftest.py  test_admin_usuarios.py  test_backup_db.py  test_dashboard.py  test_e2e_fluxo_completo.py  test_entrega_blueprint.py  test_envase_service.py  test_error_handlers.py  test_fefo_service.py  test_financeiro_blueprint.py  test_financeiro_service.py  test_grafana_dashboard.py  test_hardening.py  test_indicadores_service.py  test_mailer_smtp.py  test_money.py  test_observability.py  test_pedido_service.py  test_pedidos_blueprint.py  test_permuta_service.py  test_pool_service.py  test_ratelimit_storage.py  test_reset_senha.py  test_rota_service.py  test_rotas_blueprint.py  test_sync_backups_gdrive.py  test_sync_backups_s3.py  test_template_filters.py  test_tenant_isolation.py  test_validity.py
(+102 files in other folders)
